--- a/client/3draw.css
+++ b/client/3draw.css
@@ -12,15 +12,23 @@ body{
 }
 
 #slide{
- /*   position : absolute;*/
-	/*top : 2000px;*/
-	/*left : 45px;*/
-	/*-webkit-transform:rotate(90deg);*/
+    width: 50%;
+
 
 }
+#keyInput{
+    margin : 10px;
+}
 
-.Absolute-Center{
+.Center-Container {
+  position: relative;
+}
+
+.Absolute-Center {
+  width: 50%;
+  height: 50%;
+  overflow: auto;
   margin: auto;
   position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
 }
-  
