--- a/client/3draw.css
+++ b/client/3draw.css
@@ -16,9 +16,12 @@ body{
 
 
 }
-#keyInput{
+#keyInp{
     margin : 10px;
+    
 }
+
+button{color:#000;}
 
 .Center-Container {
   position: relative;
@@ -32,3 +35,5 @@ body{
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
 }
+
+input{color:#000;}
